Tower Config Database

--- a/src/app/scaffolding-civil-work/scaffolding-civil-work.component.html
+++ b/src/app/scaffolding-civil-work/scaffolding-civil-work.component.html
@@ -1,3 +1,20 @@
-<p>
-  scaffolding-civil-work works!
-</p>
+<app-step-nav></app-step-nav>
+<div class="container" style="margin-bottom: 70px">
+  <div class="row">
+    <div class="col-sm-12">
+        <div class="card" style="border-radius: 15px; height: 100%">
+            <div class="card-header">Scaffolding Details</div>
+            <div class="card-body">
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-12 mt-3">
+        <div class="card" style="border-radius: 15px; height: 100%">
+            <div class="card-header">Civil Works</div>
+            <div class="card-body">
+            </div>
+        </div>
+    </div>
+  </div>
+</div>
+<app-prev-next></app-prev-next>
