--- a/src/app/step-nav/step-nav.component.html
+++ b/src/app/step-nav/step-nav.component.html
@@ -11,7 +11,7 @@
         <div class="navbar-nav flex-column" [class.speech-bubble]="stepcss == 'y_strainer'">
           <a class="nav-item nav-link" routerLink="/soc/{{trackerId}}/tower/1/ystrainer">Y - Stainer</a>
         </div>
-        <div class="navbar-nav flex-column">
+        <div class="navbar-nav flex-column" [class.speech-bubble]="stepcss == 'scaffolding_civil'">
             <a class="nav-item nav-link" routerLink="/soc/{{trackerId}}/tower/1/scaffolding&civil">Scaffolding & Civil Work</a>
         </div>
         <div class="navbar-nav flex-column">
